[project]
name = "comfyui-josianodes"
description = "更新多组控制节点功能，新增单选模式，并调整了一些原有功能的执行逻辑"
version = "1.1.0"
license = { file = "LICENSE" }
dependencies = []

[project.urls]
Repository = "https://github.com/Josia-doit/ComfyUI_JosiaNodes"

[tool.comfy]
PublisherId = "josia"
DisplayName = "JosiaNodes"
Icon = ""
