[project]
name = "comfyui-josianodes"

version = "1.2.0"
description = "一套功能完整、轻量稳定的 ComfyUI 实用节点集。包含文本编码、图像缩放裁切、分组控制等8个核心节点。"
authors = [
  { name = "Josia", email = "icejj@qq.com" }
]
requires-python = ">=3.10"
dependencies = []

[project.urls]
Repository = "https://github.com/Josia-doit/ComfyUI_JosiaNodes"

[tool.comfy]
PublisherId = "josia"
DisplayName = "JosiaNodes"
Icon = ""
